# fusion360-sketch-export-dxf

./: .gitignore  README.md  config.py  pyproject.toml  sketch-export-dxf.manifest  sketch-export-dxf.py
.github/workflows/: publish.yml
src/: dxf.py
src/commands/: __init__.py
src/commands/commandDialog/: entry.py  execute.py
